--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/portfoliolda?useSSL=false&serv
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+jwt.secret=secret
+jwt.expiration=3600
+
