--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,13 @@
+#Ambiente local
+#spring.datasource.url=jdbc:mysql://localhost:3306/portfoliolda?useSSL=false&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=
+
+#Ambiente de producci\u00f3n
+spring.datasource.url=jdbc:mysql://ubtjps8kvgcrnzt0:dPTUybDMea3g7LJltwyy@bnz68eywz71kq0uf39ek-mysql.services.clever-cloud.com:3306/bnz68eywz71kq0uf39ek
+spring.datasource.username=ubtjps8kvgcrnzt0
+spring.datasource.password=ubtjps8kvgcrnzt0
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/portfoliolda?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 jwt.secret=secret
